# mysingle-template

./: .env  README.md  development.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  release-notes.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: backend_pre_start.py  initial_data.py  main.py  tests_pre_start.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 009821b93bfa_add_create_at_updated_at.py  0baa07ea2e8e_add_create_at_updated_at_as_nullable_.py  10b3f16e64eb_modified_timestamps_as_nullable.py  4eb320098e35_remove_profiles_id_and.py  76fae3f9962d_user_and_profile_model_and_schema_.py  a07344b7e3a0_user_and_profile_model_and_schema_.py  a26ceb435b99_user_and_profile_model_and_schema_.py  b9bc0b563119_user_and_profile_model_and_schema_.py  c9f32a6e98d6_initial_commit.py  d23718cdf577_timestamp_fixed.py  dad77b5b7a0f_profile_role_api_and_model_updated.py  e3d463e00b5b_cascade_for_profile_from_user_creation.py  e942f8d08b64_add_role_attribute_to_profile_model.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: items.py  login.py  private.py  profile.py  users.py  utils.py
backend/app/core/: config.py
backend/app/crud/: base.py  item.py  profile.py  user.py
backend/app/database/: session.py
backend/app/models/: __init__.py  base.py  item.py  profile.py  user.py
backend/app/schemas/: item.py  profile.py  role.py  token.py  user.py
backend/app/tests/: conftest.py
backend/app/tests/crud/: test_user.py
backend/app/utils/: utils.py
backend/scripts/: .coverage
(+87 files in other folders)
